--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.24.0",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.5.1",
     "symbol-observable": "^1.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
